--- a/templates/zoo.cfg.j2
+++ b/templates/zoo.cfg.j2
@@ -1,15 +1,11 @@
 tickTime={{ tick_time }}
 dataDir={{ data_dir }}
-dataLogDir={{ log_dir }}
+dataLogDir={{ data_log_dir }}
 clientPort={{ client_port }}
 initLimit={{ init_limit }}
 syncLimit={{ sync_limit }}
+maxClientCnxns={{ max_client_connections }}
 
-{#
-Also consider:
-server.{{server.id}}={{server.host}}:2888:3888
-#}
-
-{% for server in zookeeper_hosts %}
-server.{{loop.index}}={{server.host}}:2888:3888
+{% for server in groups['zookeepers'] %}
+server.{{ hostvars[server]['zoo_id'] }}={{ server }}:2888:3888
 {% endfor %}
